--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Profile
 logo: /assets/img/joao_victor.jpeg
-description: Minimal is a theme for GitHub Pages.
+description: Profile
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
