--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Profile
 logo: /assets/img/joao_victor.jpeg
-description: Profile
+description: joao@palhares.dev
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
