--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Profile
+title: Presentation Letter
 logo: /assets/img/joao_victor.jpeg
 description: "Contact: joao@palhares.dev"
 show_downloads: true
