--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Presentation Letter
 logo: /assets/img/joao_victor.jpeg
-description: "Contact: joao@palhares.dev"
+description: ""
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
