--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Presentation Letter
-logo: /assets/img/joao_victor.jpeg
+logo: /assets/img/joao_victor.jpg
 description: ""
 show_downloads: true
 google_analytics:
