Page under construction

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Biography
-logo: /assets/img/joao_victor.jpg
+logo: /assets/img/joao_victor.jpeg
 description: ""
 show_downloads: true
 google_analytics:
